--- a/TIL/안드로이드 프로그래밍 정리.md
+++ b/TIL/안드로이드 프로그래밍 정리.md
@@ -52,3 +52,403 @@ public void onClickCall(View view) {
 }
 ```
 
+
+
+#### 1.3.2 Intent
+
+> 안드로이드 플랫폼에게 원하는 것을 말할 때 전하는 우편
+
+- 애플리케이션 구성 요소 간에 데이터를 전달하거나 실행하려는 기능이 무엇인지 안드로이드 플랫폼에 알려주기 위한 클래스
+
+
+
+
+
+#### 1.3.3 소스 코드 정리
+
+```
+setContentView()				## 화면에 무엇을 보여줄지 결정하는 메서드
+
+R.layout.activity_main			## 화면에 보여줄 대상이 되는 xml 위치를 지정
+
+res/layout/activity_main.xml	## 자바 소스에서 R.layout.activity_main이라고 입력하여 가져올 수 있는 프로젝트 내 파일
+
+text 속성		## 화면에 보이는 글자를 변경할 때 사용하는 속성
+
+onClick 속성	## 버튼을 클릭했을 때 어떤 메서드를 실행할 것인지 간단하게 지정할 수 있는 속성
+
+Intent		## 어떤 기능을 실행할 것인지 지정할 때 사용
+
+Toast		## 화면에 잠깐 보였다 없어지는 메시지를 이용할 때 사용
+```
+
+
+
+
+
+
+
+
+
+
+
+## 2. 안드로이드 완벽 가이드
+
+### 2.1 안드로이드 스튜디오와 친숙해지기
+
+- 프로젝트 탭을 Project Files로 설정하면 윈도우 디렉토리처럼 탐색 가능
+  - 기본인 Android로 하면 손쉽게 파일 접근 가능
+- 코드의 오류를 수정했는데도 에러 표시가 사라지지 않는다면 `Sync Project with Gradle Files` 아이콘 클릭
+  - 툴바의 오른쪽에서 여섯 번째 쯤에 나뭇잎 모양으로 위치
+  - File 탭에도 있음
+
+
+
+---
+
+---
+
+#### 2.1.1 팁
+
+##### 1. 왼쪽 프로젝트 창을 열 수 있는 방법
+
+```
+View -> Tool Windows -> Project
+```
+
+##### 2. 파일이 저장되는 위치
+
+| 구분              | 저장 위치                                                    |
+| ----------------- | ------------------------------------------------------------ |
+| 소스 파일         | 프로젝트 창 : /app/java/<패키지이름>/<파일이름><br>파일 탐색기 : /app/src/main/java/<패키지이름>/<파일이름> |
+| XML 레이아웃 파일 | 프로젝트 창 : /app/res/layout/<파일이름><br>파일 탐색기 : /app/src/main/res/layout/<파일이름> |
+| 이미지 파일       | 프로젝트 창 : /app/res/drawable/<파일이름><br>파일 탐색기 : /app/src/main/res/drawable/<파일이름> |
+
+##### 3. 프로젝트 폴더에 이미지 추가하기
+
+`/app/res/drawable` 폴더에 이미지 파일을 복사
+
+이미지의 이름에는 영문 소문자, 숫자와 언더바만 사용할 수 있음
+
+##### 4. findViewById 메서드
+
+ID를 이용해 View를 찾고, 형변환을 통해 객체와 연결
+
+##### 5. 이미지뷰의 크기는 직접 설정해야 원본 이미지를 볼 수 있다
+
+- 이미지뷰에 이미지를 설정하는 가장 간단한 방법은 소스 코드에서 setImageResource() 메서드를 이용하면 된다
+- 이미지를 Darawable 객체로 만든 후, setImageDrawable() 메서드를 통해 이미지뷰에 설정하면 이미지를 화면 크기에 맞춰준다
+  - 이미지 크기를 원본 이미지로부터 불러와서 설정해줘야 스크롤뷰에서 제대로 사용 가능
+
+
+
+
+
+
+
+---
+
+---
+
+#### 2.1.2 뷰와 뷰의 크기 속성 이해하기
+
+##### 1. 뷰의 속성
+
+> 뷰는 일반적으로 컨트롤이나 위젯으로 불리는 UI 구성 요소
+>
+> 사용자의 눈에 보이는 화면의 구성 요소들
+
+
+
+- 뷰그룹은 뷰를 상속하고 있으며, 뷰는 뷰그룹 내에 배치할 수 있다.
+
+
+
+##### 2. 위젯과 레이아웃으로 구별되는 뷰
+
+> 일반적인 컨트롤의 역할을 하는 뷰를 위젯이라 한다
+>
+> 내부에 뷰를 포함하고 있으면서 이들을 배치하는 역할을 하는 뷰를 레이아웃이라 한다
+
+
+
+- 버튼과 리니어 레이아웃의 계층도
+
+  ![view_layout](안드로이드 프로그래밍 정리.assets/view_layout.png)
+
+
+
+##### 3. 뷰의 크기 속성
+
+> 뷰는 화면의 일정 영역을 차지하기 때문에 반드시 크기 속성이 있어야 한다
+
+- `android:` 안드로이드의 기본 API에서 정의한 속성
+- `layout_width` 뷰의 가로 크기
+- `layout_height` 뷰의 세로 크기
+  - `wrap_content` 뷰에 들어있는 내용물의 크기에 맞춤
+  - `match_parent` 뷰를 담고 있는 뷰그룹에 맞춤
+  - 숫자로 크기를 지정할 때는, dp나 px같은 단위를 함께 입력
+
+
+
+
+
+#### 2.1.3 레이아웃 기초 익히기
+
+- 제약 레이아웃 : 안드로이드 레이아웃의 기본 설정
+  - Xcode의 화면 배치와 비슷한 방식
+  - 단, 제약조건이 충분하게 다뤄지지 않으면 원하는 대로 만들어지지 않을 가능성이 더 높음
+
+
+
+##### 1. 제약 조건 이해하기
+
+> 뷰의 크기와 위치를 결정할 때 제약조건(Constraint)을 사용
+
+- 제약조건 : 뷰가 레이아웃 안의 다른 요소와 어떻게 연결되는지 알려주는 조건
+  - 뷰의 연결점(Anchor Point)과 대상(Target)을 연결함
+
+- 방향 바이어스 : 한쪽으로 얼마나 치우쳐 있는지를 나타내는 속성 (%)
+  - Vertical Bias : 위아래로
+  - Horizontal Bias : 좌우로
+
+
+
+
+
+##### 2. XML 원본에 추가된 속성 확인하기
+
+- `<?xml version="1.0" encoding="utf-8"?>` 이 파일이 xml 형식임을 알려주는 코드라인
+- `androidx.constraintlayout.widget.ConstraintLayout` 현재 xml의 레이아웃 방식
+  - `xmlns:android` 안드로이드 기본 SDK에 포함되어 있는 속성
+  - `xmlns:(app)` 외부 라이브러리(app)에 포함되어 있는 속성
+  - `xmlns:tools` 안드로이드 스튜디오의 디자이너 도구 등에서 화면에 보여줄 때. 앱이 실행될 때는 적용되지 않고 안드로이드 스튜디오에서만
+
+- `id` 뷰를 구분하는 구분자 역할
+  - `@+id/아이디 값` 으로 정의하고 사용
+
+
+
+
+
+##### 3. 크기를 표시하는 단위와 마진
+
+| 단위        | 단위 표현                                       | 설명                                                         |
+| ----------- | ----------------------------------------------- | ------------------------------------------------------------ |
+| px          | 픽셀                                            | 화면 픽셀의 수                                               |
+| dp 또는 dip | 밀도 독립적 픽셀<br>(density independent pixel) | 160dpi 화면을 기준으로 한 픽셀<br>예) 1인치 당 160개의 점이 있는 디스플레이 화면에서 1dp는 1px와 같음. 1인치 당 320개의 점이 있는 디스플레이 화면에서 1dp는 2px와 같음 |
+| sp 또는 sip | 축척 독립적 픽셀<br>(scale idependent pixel)    | 텍스트 크기를 지정할 때 사용하는 단위. 가변 글꼴을 기준으로 한 픽셀로 dp와 유사하나 글꼴의 설정에 따라 1sp당 픽셀 수가 달라짐 |
+| in          | 인치                                            | 1인치로 된 물리적 길이                                       |
+| mm          | 밀리미터                                        | 1밀리미터로 된 물리적 길이                                   |
+| em          | 텍스트 크기                                     | 글꼴과 상관없이 동일한 텍스트 크기 표시                      |
+
+
+
+- dp나 dip는 해상도에 비례하는 비슷한 크기로 보이게 할 때 사용
+- 해상도 별로 일일이 크기를 다시 지정하지 않아도 된다
+- sp는 텍스트 크기를 지정할 때만 사용한다
+
+
+
+
+
+
+
+
+
+### 2.2 레이아웃 익히기
+
+#### 2.2.1 안드로이드에 포함된 대표적인 레이아웃 살펴보기
+
+| 레이아웃 이름                   | 설명                                                         |
+| ------------------------------- | ------------------------------------------------------------ |
+| 제약 레이아웃(ConstraintLayout) | 제약 조건(Constraint) 기반 모델<br>제약 조건을 사용해 화면을 구성하는 방법<br>안드로이드 스튜디오에서 자동으로 설정하는 디폴트 레이아웃 |
+| 리니어 레이아웃(LinearLayout)   | 박스(Box) 모델<br>한 쪽 방향으로 차례대로 뷰를 추가하여 화면을 구성하는 방법<br>뷰가 차지할 수 있는 사각형 영역을 할당 |
+| 상대 레이아웃(RelativeLayout)   | 규칙(Rule) 기반 모델<br>부모 컨테이너나 다른 뷰와의 상대적 위치로 화면을 구성하는 방법<br>제약 레이아웃을 사용하게 되면서 상대 레이아웃은 권장하지 않음 |
+| 프레임 레이아웃(FrameLayout)    | 싱글(Single) 모델<br>가장 상위에 있는 하나의 뷰 또는 뷰그룹만 보여주는 방법<br>여러 개의 뷰가 들어가면 중첩하여 쌓게 됨. 가장 단순하지만 여러 개의 뷰를 중첩한 후 각 뷰를 전환하여 보여주는 방식으로 자주 사용함 |
+| 테이블 레이아웃(TableLayout)    | 격자(Grid) 모델<br>격자 모양의 배열을 사용하여 화면을 구성하는 방법<br>HTML에서 많이 사용하는 정렬 방식과 유사하지만 많이 사용하지는 않음 |
+
+
+
+
+
+##### 1. 뷰의 배경색
+
+```
+[Format]
+
+#RGB
+#ARGB
+#RRGGBB
+#AARRGGBB
+```
+
+
+
+ARGB(A: Alpha, R: Red, G: Green, B: Blue)의 순서
+
+A는 적지 않으면 100% 불투명도
+
+00~99로 적으면 XX%의 불투명도를 갖는다
+
+
+
+#### 2.2.2 리니어 레이아웃 사용하기
+
+##### 1. 화면 생성 과정 분석하기
+
+onCreate() 메서드 안에 setContentView() 메서드를 호출하는 부분이 있다.
+
+setContentView() 메서드 안의 파라미터를 R.layout.activity_main과 같이 레이아웃으로 정의된 리소스를 가리키도록 설정하지 않고 자바 코드에서 만든 레이아웃 객체를 가리키도록 수정
+
+XML 레이아웃에서 정의할 수 있는 대부분의 속성은 자바 소스 코드에서도 사용할 수 있도록 메서드로 제공
+
+**new 연산자를 사용해서 뷰 객체를 코드에서 만들 때는 항상 Content 객체, this가 전달되어야 한다**
+
+AppCompatActivity 클래스는 Context를 상속하므로 이 클래스 안에서는 this를 Context 객체로 사용할 수 있다
+
+Context를 상속받지 않은 클래스에서 Context를 전달해야 한다면 getApplicationContext라는 메서드를 호출하여 앱에서 참조 가능한 Context 객체를 사용할 수 있다
+
+자바 소스 코드에서 뷰를 만들어 뷰그룹에 추가할 때는 뷰 배치를 위한 속성을 설정할 수 있는 LayoutParams 객체를 사용
+
+LayoutParams 객체를 새로 만들 때는 반드시 가로세로 속성 지정
+
+소스 코드에서 레이아웃에 뷰를 추가하려면 addView() 메서드 사용
+
+
+
+```java
+@Override
+protected void onCreate(Bundle savedInstanceState) {
+    super.onCreate(savedInstanceState);
+
+    // new 연산자로 리니어 레이아웃을 만들고 방향 설정
+    LinearLayout mainLayout = new LinearLayout(this);
+    mainLayout.setOrientation(LinearLayout.VERTICAL);
+
+    // new 연산자로 레이아웃 안에 추가될 뷰들에 설정할 파라미터 생성
+    LinearLayout.LayoutParams params =
+        new LinearLayout.LayoutParams(
+        LinearLayout.LayoutParams.MATCH_PARENT,
+        LinearLayout.LayoutParams.WRAP_CONTENT
+    );
+
+    // 버튼에 파라미터 설정하고 레이아웃에 추가
+    Button button1 = new Button(this);
+    button1.setText("Button 1");
+    button1.setLayoutParams(params);
+    mainLayout.addView(button1);
+
+    // 새로 만든 레이아웃을 화면에 설정
+    setContentView(mainLayout);
+}
+```
+
+
+
+
+
+##### 3. 뷰 정렬하기
+
+> layoutgravity, gravity
+
+| 정렬 속성 값      | 설명                                                         |
+| ----------------- | ------------------------------------------------------------ |
+| top               | 대상 객체를 위쪽 끝에 배치하기                               |
+| bottom            | 대상 객체를 아래쪽 끝에 배치하기                             |
+| left              | 대상 객체를 왼쪽 끝에 배치하기                               |
+| right             | 대상 객체를 오른쪽 끝에 배치하기                             |
+| center_vertical   | 대상 객체를 수직 방향의 중앙에 배치하기                      |
+| center_horizontal | 대상 객체를 수평 방향의 중앙에 배치하기                      |
+| fill_vertical     | 대상 객체를 수직 방향으로 여유 공간만큼 확대하여 채우기      |
+| fill_horizontal   | 대상 객체를 수평 방향으로 여유 공간만큼 확대하여 채우기      |
+| center            | 대상 객체를 수직 방향과 수평 방향의 중앙에 배치하기          |
+| fill              | 대상 객체를 수직 방향과 수평 방향으로 여유 공간만큼 확대하여 채우기 |
+| clip_vertical     | 대상 객체의 상하 길이가 여유 공간보다 클 경우에 남는 부분을 잘라내기<br>top\|clip_vertical로 설정한 경우 아래쪽에 남는 부분 잘라내기<br>bottom\|clip_vertical로 설정한 경우 위쪽에 남는 부분 잘라내기<br>center_vetical\|clip_vertical로 설정한 경우 위쪽과 아래쪽에 남는 부분 잘라내기 |
+| clip_horizontal   | 대상 객체의 좌우 길이가 여유 공간보다 클 경우에 남는 부분을 잘라내기<br>right\|clip_horizontal로 설정한 경우 왼쪽쪽에 남는 부분 잘라내기<br>left\|clip_horizontal로 설정한 경우 오른쪽에 남는 부분 잘라내기<br>center_vetical\|clip_horizontal로 설정한 경우 왼쪽과 오른쪽에 남는 부분 잘라내기 |
+
+
+
+
+
+##### 4. baselineAligned
+
+> 텍스트 정렬 우선으로 하는 속성
+
+
+
+
+
+#### 2.2.3 상대 레이아웃 사용하기
+
+##### 1. 부모 컨테이너와의 상대적 위치를 이용해 뷰를 배치할 수 있는 속성
+
+| 속성                     | 설명                                              |
+| ------------------------ | ------------------------------------------------- |
+| layout_alignParentTop    | 부모 컨테이너의 위쪽과 뷰의 위쪽을 맞춤           |
+| layout_alignParentBotton | 부모 컨테이너의 아래쪽과 뷰의 아래쪽을 맞춤       |
+| layout_alignParentLeft   | 부모 컨테이너의 왼쪽 끝과 뷰의 왼쪽 끝을 맞춤     |
+| layout_alignParentRight  | 부모 컨테이너의 오른쪽 끝과 뷰의 오른쪽 끝을 맞춤 |
+| layout_centerHorizontal  | 부모 컨테이너의 수평 방향 중앙에 배치함           |
+| layout_centerVertical    | 부모 컨테이너의 수직 방향 중앙에 배치함           |
+| layout_centerInParent    | 부모 컨테이너의 수평과 수직 방향 중앙에 배치함    |
+
+
+
+##### 2. 다른 뷰와의 상대적 위치를 이용해 뷰를 배치할 수 있는 속성
+
+| 속성                 | 설명                                                |
+| -------------------- | --------------------------------------------------- |
+| layout_above         | 지정한 뷰의 위쪽에 배치함                           |
+| layout_below         | 지정한 뷰의 아래쪽에 배치함                         |
+| layout_toLeftOf      | 지정한 뷰의 왼쪽에 배치함                           |
+| layout_toRightOf     | 지정한 뷰의 오른쪽에 배치함                         |
+| layout_alignTop      | 지정한 뷰의 위쪽과 맞춤                             |
+| layout_alignBottom   | 지정한 뷰의 아래쪽과 맞춤                           |
+| layout_alignLeft     | 지정한 뷰의 왼쪽과 맞춤                             |
+| layout_alignBaseline | 지정한 뷰와 내용물의 아래쪽 기준선(baseline)을 맞춤 |
+
+
+
+
+
+#### 2.2.4 테이블 레이아웃
+
+1. TableLayout을 화면에 배치한다
+2. TableRow를 TableLayout에 배치한다
+   - height는 내부적으로 항상 wrap_content
+   - weight는 항상 match_parent
+
+
+
+
+
+
+
+#### 2.2.5 프레임 레이아웃과 뷰의 전환
+
+> 뷰 중에서 하나의 뷰만 화면에 표시
+>
+> 나중에 쌓인 뷰일수록 먼저 보이게 됨
+
+- visibility : 뷰를 보여줄지 보여주지 않을지 설정하는 속성
+
+
+
+##### 1. 사용방법
+
+1. FrameLayout을 추가하고, 내부에 원하는 뷰를 배치한다
+   - 예시에서는 이미지뷰 2개를 배치했다
+   - 처음에 배치된 뷰는 invisible, 마지막으로 배치된 뷰는 visible이 부여된다
+2. 이미지뷰 2개를 객체로 가져온다
+3. onClick 메서드로 두 이미지뷰의 visibility의 속성을 각각 invisible을 visible로, visible을 invisible로 바꾸도록 한다
+   - 이미지뷰.setVisibility(View.INVISIBLE);
+
+
+
+
+
+#### 2.2.6 스크롤뷰
+
+
+
