--- a/TIL/안드로이드 프로그래밍 정리.md
+++ b/TIL/안드로이드 프로그래밍 정리.md
@@ -1029,8 +1029,9 @@ Toast.makeText(Context context, String message, int duration).show()
       ![request_code_menu](안드로이드 프로그래밍 정리.assets/request_code_menu.jpg)
 
 - Intent(Context, ActivityClassInstance)
-  - 일반적으로 Context로는 this를 사용하지만 이벤트 처리 메서드 안에서 this 변수로 현재 Activity 객체를 참조할 수 없을 경우, getApplicationContext()를 사용
-
+  
+- 일반적으로 Context로는 this를 사용하지만 이벤트 처리 메서드 안에서 this 변수로 현재 Activity 객체를 참조할 수 없을 경우, getApplicationContext()를 사용
+  
 - protected void onActivityResult(int requestCode, int resultCode, intent intent)
   - requestCode : 액티비티를 전달했던 요청 코드
   - resultCode : 새 액티비티로부터 전달된 응답 코드
@@ -1265,4 +1266,175 @@ SampleCallIntent 참조
 
 
 
+
+## 5. 프래그먼트
+
+### 5.1 프래그먼트란?
+
+> 화면의 일부분을 다른 화면으로 구성하고 싶을 때는?
+>
+> 즉, 전체 화면 안에 부분 화면을 만들어 넣은 경우
+
+#### 5.1.1 프래그먼트에 대해 이해하기
+
+![what_is_fragment](안드로이드 프로그래밍 정리.assets/whatisfragment.jpg)
+
+- 프래그먼트 : 오른쪽 그림처럼 하나의 화면을 여러 부분으로 나눠서 보여주거나 각각의 부분 화면 단위로 바꿔서 보여주고 싶을 때 사용하는 것
+
+
+
+##### 1. 프래그먼트 사용 목적
+
+- 분할된 화면들을 독립적으로 구성하기 위해 사용
+- 분할된 화면들의 상태를 관리하기 위해 사용
+
+
+
+
+
+##### 2. 프래그먼트 동작 방식
+
+![howdofragmentact](안드로이드 프로그래밍 정리.assets/howdoactivitydo.jpg)
+
+
+
+- 프래그먼트는 항상 액티비티 위에 있어야 한다
+  - 액티비티로 만든 화면을 분할한 뒤 각각의 부분 화면을 프래그먼트로 만들고 그 프래그먼트를 독립적으로 관리하는 것이 목표
+  - 프래그먼트가 제대로 동작하는 시점은 프래그먼트가 액티비티에 올라가는 시점
+- 왼쪽 그림은 액티비티가 동작하는 방식
+  - 액티비티는 안드로이드 시스템에서 관리
+  - 액티비티 매니저가 액티비티의 동작 순서나 처리 방식을 결정
+  - 인텐트를 통해 시스템이 이해하는 형식으로 명령, 데이터를 전달
+- 오른쪽 그림은 프래그먼트가 동작하는 방식
+  - 안드로이드 시스템이 하는 일을 액티비티가 함
+  - 프래그먼트 매니저가 프래그먼트 관리
+  - 액티비티와 프래그먼트 간에 데이터를 전달할 때는 메서드를 통해서
+- 프래그먼트는 액티비티 위에 하나만 올라가 있어도 된다
+  - 이렇게 하면 원하는 시점에 하나의 프래그먼트를 다른 프래그먼트로 바꿔서 보여줄 수도 있다
+
+
+
+
+
+#### 5.1.2 프래그먼트를 화면에 추가하는 방법
+
+![process_of_adding_one_fragment_to_activity](안드로이드 프로그래밍 정리.assets/processofaddingfragmenttoactivity.jpg)
+
+- 부분 화면을 독립적으로 사용하기 위해서 액티비티를 본 뜬 프래그먼트
+- 프래그먼트도 하나의 XML 레이아웃과 하나의 자바 소스 파일로 동작
+
+1. 프래그먼트를 위한 뷰 배치를 설정한 XML 레이아웃 생성
+2. 프래그먼트를 위한, Fragment 클래스를 상속한 자바 소스
+3. 주요 메서드
+   - public final Activity getActivity() : 이 프래그먼트를 포함하는 액티비티를 반환
+   - public final FragmentManager getFragmentManager() : 이 프래그먼트를 포함하는 액티비티에서 프래그먼트 객체들과 의사소통하는 프래그먼트 매니저를 반환
+   - public final Fragment getParentFragment() : 이 프래그먼트를 포함하는 부모가 프래그먼트일 경우 리턴, 액티비일 경우 null을 반환
+   - public final int getId () : 이 프래그먼트의 ID를 반환
+
+4. setContentView() 대신 LayoutInflater를 사용해 인플레이션
+   - onCreateView()는 인플레이션이 필요한 시점에 자동으로 호출
+     - inflate()를 호출하도록 두면 인플레이션 후 프래그먼트가 뷰처럼 동작
+5. 새로 만든 프래그먼트는 뷰와 마찬가지로 XML 레이아웃에 추가하거나 소스코드에서 new 연산자자로 객체를 만든 후 프래그먼트 매니저로 메인 액티비티에 추가
+   - 메인 화면을 위해 만든 acitivity_main.xml 파일에 직접 `<fragment>` 태그로 추가
+   - 새로 정의한 프래그먼트 클래스의 객체를 new 연산자로 만든 후 FragmentManager 객체의 add() 메서드를 사용해 액티비티에 추가
+     - public abstract FragmentTransaction beginTransaction () : 프래그먼트를 변경하기 위한 트랜잭션 시작
+     - public abstract Fragment findFragmentById (int id) : ID를 이용해 프래그먼트 객체를 찾음
+     - public abstract Fragment findFragmentByTag (String tag) : 태그 정보를 사용해 프래그먼트 객체를 찾음
+     - public abstract boolean executePendingTransaction () : 트랜잭션은 commit() 메서드를 호출하면 실행되지만 비동기 방식으로 실행되므로 즉시 실행하고 싶은 경우 추가로 호출하는 메서드
+   - FragmentManager 객체는 프래그먼트를 액티비티에 추가(add), 다른 프래그먼트로 바꾸거나(replace) 또는 삭제(remove)할 때 주로 사용할 수 있다
+     - getFragmentManager() 메서드를 호출하여 참조할 수 있다
+
+
+
+
+
+##### 1. 프래그먼트의 특성
+
+| 특성          | 설명                                                         |
+| ------------- | ------------------------------------------------------------ |
+| 뷰 특성       | 뷰그룹에 추가되거나 레이아웃의 일부가 될 수 있음<br>뷰에서 상속받은 것은 아니며 뷰를 담고 있는 일종의 틀 |
+| 액티비티 특성 | 액티비티처럼 수명주기(Lifecycle)를 갖고 있음<br>컨텍스트 객체는 아니며 라이프사이클은 액티비티에 종속 |
+
+
+
+
+
+
+
+#### 5.1.3 프래그먼트를 만들어 화면에 추가하기
+
+#### SampleFragment 참조
+
+```
+프래그먼트를 만들어 사용하는 과정
+
+1. 프래그먼트를 위한 XML 레이아웃 만들기
+2. 프래그먼트 클래스 만들기
+3. 액티비티를 XML 레이아웃에 추가하기
+```
+
+```
+화면에 뷰를 추가하는 방법 2가지
+1. XML 레이아웃에 추가하는 방법
+2. 자바 소스 코드로 추가하는 방법
+```
+
+
+
+
+
+##### 1. xml 파일 간단히 설정
+
+##### 2. MainFragment.java 파일의 onCreateView() 메서드 이외의 코드 제거
+
+- onCreateView() 메서드의 파라미터로 LayoutInflater 객체가 전달되므로 inflate() 메서드 호출 가능
+  - inflate() 메서드로 전달되는 첫 번째 파라미터는 XML 레이아웃 파일
+  - 두 번째 파라미터는 XML 레이아웃이 설정될 뷰그룹 객체
+    - onCreateView() 메서드로 전달되는 두 번째 파라미터가 현재 프래그먼트의 최상위 레이아웃이므로 이를 전달
+- inflate() 호출 시 인플레이션 진행 후 ViewGroup 객체가 return을 통해 반환
+
+##### 3. MainActivity.xml에 fragment 태그 추가
+
+![overview_fragment](안드로이드 프로그래밍 정리.assets/overview_fragment.jpg)
+
+
+
+
+
+##### 4. 버튼 클릭했을 때 코드에서 프래그먼트 추가
+
+- fragment_menu는 xml파일과 소스 파일로 프래그먼트를 추가해보는 방법 적용
+
+
+
+
+
+![how_to_communicate_fragment](안드로이드 프로그래밍 정리.assets/howtocommunicatefragment.jpg)
+
+
+
+
+
+##### 5. 프래그먼트의 수명주기
+
+![fragment_lifecycle](안드로이드 프로그래밍 정리.assets/fragmentlifecycle.jpg)
+
+| 메서드                                          | 설명                                                         |
+| ----------------------------------------------- | ------------------------------------------------------------ |
+| onAttach(Activity)                              | 프래그먼트가 액티비티와 연결될 때 호출됨                     |
+| onCreate(Bundle)                                | 프래그먼트가 초기화될 때 호출됨<br>(new 연산자를 이용해 새로운 프래그먼트 객체를 만드는 시점이 아니다) |
+| onCreateView(LayoutInflater, ViewGroup, Bundle) | 프래그먼트와 관련되는 뷰 계층을 만들어서 리턴                |
+| onActivityCreated(Bundle)                       | 프래그먼트와 연결된 액티비티가 onCreate() 메서드의 작업을 완료했을 때 호출 |
+| onStart()                                       | 프래그먼트와 연결된 액티비티가 onStart() 되어 사용자에게 프래그먼트가 보일 때 호출 |
+| onResume()                                      | 프래그먼트와 연결된 액티비티가 onResume() 되어 사용자와 상호작용 할 수 있을 때 호출 |
+
+
+
+| 메서드          | 설명                                                         |
+| --------------- | ------------------------------------------------------------ |
+| onPause()       | 프래그먼트와 연결된 액티비티가 onPause() 되어 사용자와 상호작용을 중지할 때 호출됨 |
+| onStop()        | 프래그먼트와 연결된 액티비티가 onStop() 되어 화면에서 더 이상 보이지 않을 때나 프래그먼트의 기능이 중지되었을 때 호출됨 |
+| onDestroyView() | 프래그먼트와 관련된 뷰 리소스를 해제할 수 있도록 호출        |
+| onDestroy()     | 프래그먼트의 상태를 마지막으로 정리할 수 있도록 호출         |
+| onDetach()      | 프래그먼트가 액티비티와 연결을 끊기 바로 전에 호출           |
 
